--- a/css/main.scss
+++ b/css/main.scss
@@ -32,7 +32,7 @@ $blue-sky: #2D6391;
 $light-sky: #548AA2;
 
 $grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
+$grey-color-light: lighten($grey-color, 25%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
